# url-shortener

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
nginx/: app.conf
redirection/app/api/: deps.py
redirection/app/api/routes/: users.py
redirection/app/schemas/: models.py
redirection/app/services/: exceptions.py
shortening/: Dockerfile
shortening/app/api/: main.py
shortening/app/api/routes/: utils.py
shortening/app/core/: config.py  db.py
shortening/app/services/: auth.py
url_redirection_service/app/: backend_pre_start.py  main.py
url_redirection_service/app/api/routes/: auth.py
url_redirection_service/app/schemas/: domain.py
url_redirection_service/app/services/: users.py
url_shortener_service/: pyproject.toml
url_shortener_service/app/: backend_pre_start.py
url_shortener_service/app/api/: deps.py  main.py
url_shortener_service/app/api/routes/: urls.py
url_shortener_service/app/core/: config.py  db.py  redis.py  security.py
url_shortener_service/app/schemas/: domain.py
url_shortener_service/app/services/: base62.py  urls.py
url_shortener_service/app/tests/: conftest.py
